--- a/diego.html
+++ b/diego.html
@@ -5,8 +5,10 @@
     </head>
     <body>
         <div id="container">
+            
+            
             <div id="cabecera">
-                Cabecera
+                Cabecera en 
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
